--- a/app/views/send/input/input.component.android.scss
+++ b/app/views/send/input/input.component.android.scss
@@ -23,6 +23,11 @@
     width: 50;
 }
 
+.selected {
+    color: $background-light;
+    background-color: $background-dark;
+}
+
 .sideStackLayout {
     background-color: $background-light;
 }
