--- a/app/views/send/input/input.component.android.scss
+++ b/app/views/send/input/input.component.android.scss
@@ -28,6 +28,11 @@
     background-color: $background-dark;
 }
 
+.scroll-container {
+    height: 60;
+    vertical-align: bottom;
+}
+
 .sideStackLayout {
     background-color: $background-light;
 }
