--- a/app/views/tabs/accounts/accounts.component.android.html
+++ b/app/views/tabs/accounts/accounts.component.android.html
@@ -2,14 +2,14 @@
     <ng-template let-item="item" let-i="index">
         <StackLayout>
             <GridLayout (tap)="selectAccount(item)" (longPress)="onLongPress(item.address)" (swipe)="onSwipeItem($event)" class="list-item" columns="auto, auto, auto, *, auto, auto" rows="auto, auto, auto, auto">
-                <Label col="0" row="0" colspan="3" [text]="item.address"></Label>
+                <Label col="0" row="0" colspan="4" [text]="item.address"></Label>
                 <Label *ngIf="item.selected" col="5" row="0" rowspan="2" class="fa text-center select-indicator" text="&#xf111;"></Label>
                 <Label *ngIf="!item.selected" col="5" row="0" rowspan="2" class="fa text-center select-indicator" text="&#xf10c;"></Label>
 
                 <Label col="0" row="1" colspan="3" rowspan="2" class="balance text-center" [text]="('TABS.ACCOUNTS.BALANCE' | translate) + ': ' + item.balance + ' BURST'"></Label>
 
-                <Label *ngIf="item.type == 'active'" col="4" row="0" class="text-center fa active-indicator" text="&#xf00c;"></Label>
-                <Label *ngIf="item.type == 'offline'" col="4" row="0" class="text-center fa active-indicator" text="&#xf05e;"></Label>
+                <Label *ngIf="item.keys != undefined" col="4" row="0" class="text-center fa active-indicator" text="&#xf00c;"></Label>
+                <Label *ngIf="item.keys == undefined" col="4" row="0" class="text-center fa active-indicator" text="&#xf05e;"></Label>
                 <Label col="1" row="3" class="fa text-center p-t-2 p-l-5 p-r-5" text="&#xf0ec;"></Label>
                 <Label col="0" row="3" class="text-right" [text]="marketService.getPriceBTC(item.balance)"></Label>
                 <Label col="2" row="3" class="text-left" [text]="marketService.getPriceFiatCurrency(item.balance)"></Label>
