actionbar title style fix

--- a/app/app.android.scss
+++ b/app/app.android.scss
@@ -13,8 +13,8 @@ Page {
     color: $default-text;
 }
 
-.action-bar {
-    text-align: left;
+.action-bar-title {
+    width: 100%;
 }
 
 .logo-tiny {
