--- a/app/views/tabs/tabs.component.android.html
+++ b/app/views/tabs/tabs.component.android.html
@@ -1,9 +1,9 @@
 <Page xmlns="http://www.nativescript.org/tns.xsd" loaded="onPageLoaded">
-    <ActionBar class="action-bar">
-        <GridLayout columns="auto, 200" rows="auto">
-            <Image col="0" class="logo-tiny m-r-15" src="res://logo"></Image>
-            <Label col="1" class="action-bar-title" [text]="title"></Label>
-        </GridLayout>
+    <ActionBar class="action-bar text-left">
+        <StackLayout orientation="horizontal">
+            <Image class="logo-tiny m-r-15" src="res://logo"></Image>
+            <Label class="action-bar-title" [text]="title"></Label>
+        </StackLayout>
     </ActionBar>
 
     <TabView #tabs (selectedIndexChanged)="onSelectedIndexChanged($event)">
