--- a/app/views/tabs/transactions/transactions.component.android.html
+++ b/app/views/tabs/transactions/transactions.component.android.html
@@ -1,26 +1,30 @@
 <RadListView [items]="transactions" pullToRefresh="true" (pullToRefreshInitiated)="refresh($event)" separatorColor="transparent">
     <ng-template tkListItemTemplate let-item="item" let-i="index">
         <StackLayout>
-            <GridLayout *ngIf="item.recipientId == ownId" (tap)="onTap(item.id)" (doubleTap)="onDoubleTap(item.senderAddress)" (longPress)="onLongPress(item.senderAddress)" class="m-x-auto list-item" columns="auto, auto, auto, *, auto" rows="auto, auto, auto">
+            <GridLayout *ngIf="item?.recipientId == ownId" (tap)="onTap(item.id)" (doubleTap)="onDoubleTap(item.senderAddress)" (longPress)="onLongPress(item.senderAddress)" class="m-x-auto list-item" columns="auto, auto, auto, *, auto" rows="auto, auto, auto, auto">
                 <Label col="0" row="0" colspan="3" class="font-weight-italic fa p-b-5 amount" [text]="item.amountNQT + ' BURST / ' + marketService.getPriceFiatCurrency(item.amountNQT, 2)"></Label>
                 <Label col="4" row="0" class="transaction-label-in fa" text="&#xf078;"></Label>
 
                 <Label col="0" row="1" colspan="5" class="fa p-b-5 address" [text]="'&#xf2c0; ' + item.senderAddress"></Label>
 
                 <Label col="0" row="2" colspan="3" class="fa p-b-5" [text]="'&#xf017; ' + (convertTimestamp(item.timestamp) | date: 'dd.MM.yyyy HH:mm:ss')"></Label>
-                <Label *ngIf="item.confirmed" col="4" row="2" class="fa confirmed-indicator p-b-5 text-right" text="&#xf00c;"></Label>
-                <Label *ngIf="!item.confirmed" col="4" row="2" class="fa unconfirmed-indicator p-b-5 text-right" text="&#xf021;"></Label>
+                <Label *ngIf="item?.confirmed" col="4" row="2" class="fa confirmed-indicator p-b-5 text-right" text="&#xf00c;"></Label>
+                <Label *ngIf="!item?.confirmed" col="4" row="2" class="fa unconfirmed-indicator p-b-5 text-right" text="&#xf021;"></Label>
+
+                <Label *ngIf="item?.attachment?.message != undefined" col="0" row="3" colspan="4" class="fa p-b-5" [text]="'&#xf003; ' + item.attachment.message"></Label>
             </GridLayout>
-            <GridLayout *ngIf="item.recipientId != ownId" (tap)="onTap(item.id)" (doubleTap)="onDoubleTap(item.recipientAddress)" (longPress)="onLongPress(item.recipientAddress)" class="m-x-auto list-item" columns="auto, auto, auto, *, auto" rows="auto, auto, auto">
+            <GridLayout *ngIf="item?.recipientId != ownId" (tap)="onTap(item.id)" (doubleTap)="onDoubleTap(item.recipientAddress)" (longPress)="onLongPress(item.recipientAddress)" class="m-x-auto list-item" columns="auto, auto, auto, *, auto" rows="auto, auto, auto, auto">
                 <Label col="0" row="0" colspan="3" class="font-weight-italic fa p-b-5 amount" [text]="item.amountNQT + ' BURST / ' + marketService.getPriceFiatCurrency(item.amountNQT, 2)"></Label>
                 <Label col="4" row="0" class="transaction-label-out fa" text="&#xf077;"></Label>
 
                 <Label col="0" row="1" colspan="5" class="fa p-b-5 address" [text]="'&#xf2bc; ' + item.recipientAddress"></Label>
 
                 <Label col="0" row="2" colspan="3" class="fa p-b-5" [text]="'&#xf017; ' + (convertTimestamp(item.timestamp) | date: 'dd.MM.yyyy HH:mm:ss')"></Label>
-                <Label *ngIf="item.confirmed" col="4" row="2" class="fa confirmed-indicator p-b-5 text-right" text="&#xf00c;"></Label>
-                <Label *ngIf="!item.confirmed" col="4" row="2" class="fa unconfirmed-indicator p-b-5 text-right" text="&#xf021;"></Label>
-            </GridLayout>
+                <Label *ngIf="item?.confirmed" col="4" row="2" class="fa confirmed-indicator p-b-5 text-right" text="&#xf00c;"></Label>
+                <Label *ngIf="!item?.confirmed" col="4" row="2" class="fa unconfirmed-indicator p-b-5 text-right" text="&#xf021;"></Label>
+
+                <Label *ngIf="item?.attachment?.message != undefined" col="0" row="3" colspan="4" class="fa p-b-5" [text]="'&#xf003; ' + item.attachment.message"></Label>
+        </GridLayout>
         </StackLayout>
     </ng-template>
 </RadListView>
