--- a/app/views/tabs/transactions/transactions.component.android.scss
+++ b/app/views/tabs/transactions/transactions.component.android.scss
@@ -36,3 +36,18 @@
     font-size: 16;
     padding-left: 5;
 }
+
+.decrypt-button {
+    margin: 0;
+    padding: 0;
+    height: 50;
+    width: 50;
+}
+
+.vertical-center {
+    vertical-align: center;
+}
+
+.vertical-bottom {
+    vertical-align: bottom;
+}
